--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.7.5",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "recharts": "^2.12.7",
     "sweetalert2": "^11.12.4",
     "web-vitals": "^2.1.4"
@@ -44,7 +46,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.41",
+    "postcss": "^8.4.42",
     "tailwindcss": "^3.4.10"
   }
 }
