--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
+    "react-web-vector-icons": "^1.0.2",
     "recharts": "^2.12.7",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
