--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "assert": "^2.1.0",
     "axios": "^1.7.7",
     "browserify-zlib": "^0.2.0",
+    "chart.js": "^4.4.4",
     "https-browserify": "^1.0.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
