--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
+    "react-easy-crop": "^5.0.8",
     "react-icons": "^5.3.0",
+    "react-image-crop": "^11.0.7",
     "react-loader-spinner": "^6.1.6",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
