--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "axios": "^1.7.7",
     "browserify-zlib": "^0.2.0",
     "chart.js": "^4.4.4",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "https-browserify": "^1.0.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.3.0",
@@ -22,8 +25,10 @@
     "react-image-crop": "^11.0.7",
     "react-loader-spinner": "^6.1.6",
     "react-modal": "^3.16.1",
+    "react-phone-number-input": "^3.4.8",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.14.1",
     "react-transition-group": "^4.4.5",
     "react-web-vector-icons": "^1.0.2",
     "recharts": "^2.12.7",
@@ -32,7 +37,9 @@
     "sweetalert2": "^11.12.4",
     "url": "^0.11.4",
     "util": "^0.12.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
+    "xlsx-style": "^0.8.13"
   },
   "scripts": {
     "start": "react-scripts start",
