--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "https-browserify": "^1.0.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
     "react-chartjs-2": "^5.2.0",
+    "react-cropper": "^2.3.3",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-easy-crop": "^5.0.8",
@@ -28,6 +30,7 @@
     "react-phone-number-input": "^3.4.8",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.1",
     "react-spinners": "^0.14.1",
     "react-transition-group": "^4.4.5",
     "react-web-vector-icons": "^1.0.2",
