polishing needing for files

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "assert": "^2.1.0",
     "axios": "^1.7.7",
     "browserify-zlib": "^0.2.0",
-    "chart.js": "^4.4.4",
+    "chart.js": "^4.4.6",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "https-browserify": "^1.0.0",
@@ -32,6 +33,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.1",
     "react-spinners": "^0.14.1",
+    "react-tooltip": "^5.28.0",
     "react-transition-group": "^4.4.5",
     "react-web-vector-icons": "^1.0.2",
     "recharts": "^2.12.7",
