--- a/package.json
+++ b/package.json
@@ -48,13 +48,12 @@
     "xlsx-style": "^0.8.13"
   },
   "scripts": {
-    "start": "cross-env BROWSER=none react-scripts start",
+    "start": "react-scripts start",
     "electron": "electron ./public/electron.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "package": "npm run build && electron-builder",
-    "dev": "start /B npm start && timeout /t 8 && npm run electron"
+    "package": "npm run build && electron-builder"
   },
   "eslintConfig": {
     "extends": [
